[package]
name = "kip_db"
version = "0.1.0"
edition = "2021"
authors = ["Kould <2435992353@qq.com>"]
description = "A key-value store"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bench]]
name = "server_bench"
path = "src/bench/kernel_bench.rs"
harness = false

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = { version = "0.1.5", features = ["derive"] }
# 序列化
serde = { version = "1.0.89", features = ["derive"] }
bincode = "1.3.3"
rmp-serde = "1.1.0"
# tokio异步
tokio = { version="1", features = ["full"] }
futures = "0.3"
tokio-util = { version="0.7.3", features = ["codec"] }
tokio-stream = "0.1.9"
async-trait = "0.1.57"
# 数据承载媒介
bytes = "1.2.1"
lru = "0.8.1"
# 文件IO
memmap2 = "0.5.4"
# 日志
tracing = "0.1"
tracing-subscriber = "0.3"
# 工具
clap = { version = "3.1.18", features = ["derive"] }
growable-bloom-filter = "2.0.1"
itertools = "0.10.3"
chrono = "0.4.19"
rs-snowflake = "0.6.0"
crc32fast = "1.3.2"
#crossbeam = "0.7.1"
## 线程池
#rayon = "1.0.3"
# 其他数据库内核
sled = "0.34.7"
# 单元测试用
tempfile = "3.0.7"
rand = "0.8.5"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
walkdir = "2.2.7"
tokio-test = "*"
criterion = { version = "0.3.5", features = ["async_tokio", "html_reports"] }

#[source.crates-io]
#replace-with = "vendored-sources"
#
#[source.vendored-sources]
#directory = "./vendor"